@@ -2,6 +2,7 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 - Improve session and KV acquisition and cleanup
+- Support for running commands in remote datacenters
 
 0.002     2017-07-29 16:20:54+10:00 Australia/Melbourne
 - Add the 'wait' option
